# zin_lang

./: .gitignore  README-WASM.md  README.md  TODO.md  build-wasm.sh  codeblock.html  codeblock.zin  debug_test.html  debug_zin.html  debug_zin.zin  example_simple.html  hie.yaml  memo2.md  multiline_test.zin  simple_test.html  simple_test.zin  table.html  test_new_syntax_clean.html  test_pipe.html  test_pipe.zin  test_simple_output.html  test_styles.zin  test_styles_output.html  test_working.zin  todo.md  zin-compiler.cabal
dev001/: README.md
dev001/doc/: codeblock.md
dev001/src/: main.rs
dev002/: example.zin  example_simple.zin  memo.md  paragraph.html  paragraph.zin  zin-compiler.cabal
dev002/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dev002/doc/: compiler_design.md  reserved_word.md  style.md  syntax.md
dev002/src/: Main.hs
dev002/src/Zin/: AST.hs  CodeGen.hs  Error.hs  Lexer.hs  Parser.hs  Renderer.hs  VirtualDOM.hs
dev002/test/: Spec.hs
doc/: codeblock.md  style.md
doc/code_explain/: 01_Main.md  03_Lexer.md  04_Parser.md  05_Error.md  06_Semantic.md
doc/detailed_design/: codeblock.md  zin_samples.md
docs/: 00_Overview.md  02_AST.md  07_VirtualDOM.md  08_VirtualCodeGen.md  09_CodeGen.md  10_Renderer.md  11_IncrementalCompilation.md
mock/: README.md  codeblock.zin  create-mock-wasm.js  create-updated-mock-wasm.js  debug_test.zin  example-wasm.html  example_simple.html  example_simple.zin  table.zin  test-list-colon.html  test-list-colon.zin  test-new-list.html  test-new-list.zin  test_new_syntax.zin  test_simple.zin  zin-compiler-wasm.js  zin-wasm.js
old/: TODO.md
old/doc/: mode.md  syntax.md
src/: Main.hs  main.rs
src/Zin/: AST.hs  Cache.hs  Chunking.hs  CodeGen.hs  Diff.hs  Error.hs  Incremental.hs  IncrementalCompiler.hs  Lexer.hs  Parser.hs  Renderer.hs  Semantic.hs  VirtualCodeGen.hs  VirtualDOM.hs
test/: Spec.hs
