cabal-version:      3.0
name:               zin-compiler
version:            0.1.0.0
synopsis:           A compiler for the zin markup language
description:        
    zin-compiler is a Haskell implementation of a compiler for the zin markup language.
    It parses zin files and generates HTML output with support for styling, links, 
    code blocks, tables, lists, and more.

homepage:           https://github.com/zin-lang/zin-compiler
license:            MIT
author:             zin-compiler team
maintainer:         team@zin-lang.org
category:           Text
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable zin-compiler
    import:           warnings
    main-is:          Main.hs
    other-modules:    
        Zin.Lexer,
        Zin.Parser,
        Zin.AST,
        Zin.Semantic,
        Zin.CodeGen,
        Zin.VirtualDOM,
        Zin.VirtualCodeGen,
        Zin.Renderer,
        Zin.Error,
        Zin.Cache,
        Zin.Chunking,
        Zin.Diff,
        Zin.Incremental,
        Zin.IncrementalCompiler
    build-depends:    
        base >= 4.7 && < 5,
        text,
        containers,
        filepath,
        directory,
        mtl,
        time,
        cryptohash-sha256,
        aeson,
        vector,
        bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

executable zin-compiler-wasm
    import:           warnings
    main-is:          Main.hs
    cpp-options:      -DWASM_BUILD
    ghc-options:      -optl-mexec-model=reactor
    other-modules:    
        Zin.Lexer,
        Zin.Parser,
        Zin.AST,
        Zin.Semantic,
        Zin.CodeGen,
        Zin.VirtualDOM,
        Zin.VirtualCodeGen,
        Zin.Renderer,
        Zin.Error,
        Zin.WASM
    build-depends:    
        base >= 4.16 && < 5,
        text,
        containers,
        mtl,
        aeson,
        vector,
        bytestring
    hs-source-dirs:   src
    default-language: Haskell2010
    if arch(wasm32)
        buildable: True
    else
        buildable: False

test-suite zin-compiler-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, src
    main-is:          Spec.hs
    other-modules:    
        Zin.AST,
        Zin.Cache,
        Zin.Chunking,
        Zin.Diff,
        Zin.Error,
        Zin.Incremental,
        Zin.IncrementalCompiler,
        Zin.Lexer,
        Zin.Parser,
        Zin.Renderer,
        Zin.Semantic,
        Zin.VirtualCodeGen,
        Zin.VirtualDOM
    build-depends:
        base,
        text,
        containers,
        filepath,
        directory,
        mtl,
        time,
        cryptohash-sha256,
        aeson,
        vector