cabal-version:      3.0
name:               zin-compiler
version:            0.1.0.0
synopsis:           A compiler for the zin markup language
description:        
    zin-compiler is a Haskell implementation of a compiler for the zin markup language.
    It parses zin files and generates HTML output with support for styling, links, 
    code blocks, tables, lists, and more.

homepage:           https://github.com/zin-lang/zin-compiler
license:            MIT
author:             zin-compiler team
maintainer:         team@zin-lang.org
category:           Text
build-type:         Simple

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable zin-compiler
    import:           warnings
    main-is:          Main.hs
    other-modules:    
        Zin.Lexer,
        Zin.Parser,
        Zin.AST,
        Zin.Semantic,
        Zin.CodeGen,
        Zin.VirtualDOM,
        Zin.VirtualCodeGen,
        Zin.Renderer,
        Zin.Error
    build-depends:    
        base >= 4.16 && < 5,
        text,
        containers,
        filepath,
        directory,
        mtl
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite zin-compiler-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base,
        text,
        containers